# ef1911_varme

./: .gitmodules  Makefile  pyproject.toml  readme.md  shell.nix  spice.sh
