[tool.poetry]
name = "ef1911_varme"
version = "0.1.0"
description = ""
authors = ["Mark Ruvald Pedersen <mped@demant.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tc-pypeflow = "^2020.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
